--- a/lora.ipynb
+++ b/lora.ipynb
@@ -80,7 +80,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 0: 100%|██████████| 6000/6000 [05:01<00:00, 19.90it/s, loss=0.238]\n"
+      "Epoch 1: 100%|██████████| 6000/6000 [04:57<00:00, 20.15it/s, loss=0.238]\n"
      ]
     }
    ],
@@ -156,7 +156,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Testing: 100%|██████████| 1000/1000 [00:04<00:00, 222.85it/s]"
+      "Testing: 100%|██████████| 1000/1000 [00:04<00:00, 219.14it/s]"
      ]
     },
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -405,14 +405,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 0:  99%|█████████▉| 99/100 [00:03<00:00, 27.80it/s, loss=3.5e-8] \n"
+      "Epoch 1:  99%|█████████▉| 99/100 [00:02<00:00, 42.72it/s, loss=0.0749]\n"
      ]
     }
    ],
@@ -430,21 +430,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "Assertion on first line",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[27], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Check that frozen parameters are still unchanged\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mall(net\u001b[38;5;241m.\u001b[39mlinear1\u001b[38;5;241m.\u001b[39mparametrizations[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mweight\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39moriginal \u001b[38;5;241m==\u001b[39m original_weights[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlinear1.weight\u001b[39m\u001b[38;5;124m'\u001b[39m]), \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAssertion on first line\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mall(net\u001b[38;5;241m.\u001b[39mlinear2\u001b[38;5;241m.\u001b[39mparametrizations\u001b[38;5;241m.\u001b[39mweight\u001b[38;5;241m.\u001b[39moriginal \u001b[38;5;241m==\u001b[39m original_weights[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlinear2.weight\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mall(net\u001b[38;5;241m.\u001b[39mlinear3\u001b[38;5;241m.\u001b[39mparametrizations\u001b[38;5;241m.\u001b[39mweight\u001b[38;5;241m.\u001b[39moriginal \u001b[38;5;241m==\u001b[39m original_weights[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlinear3.weight\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
-      "\u001b[1;31mAssertionError\u001b[0m: Assertion on first line"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Check that frozen parameters are still unchanged\n",
     "assert torch.all(net.linear1.parametrizations['weight'].original == original_weights['linear1.weight']), \"Assertion on first line\"\n",
@@ -468,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -492,21 +480,10 @@
       "        [0.0242, 0.0290, 0.0336, 0.0092, 0.0459],\n",
       "        [0.0357, 0.0707, 0.0226, 0.0355, 0.0826],\n",
       "        [0.0587, 0.0097, 0.0444, 0.0334, 0.0658],\n",
-      "        [0.0478, 0.0374, 0.0301, 0.0470, 0.0216]], grad_fn=<SliceBackward0>)\n",
+      "        [0.0460, 0.0355, 0.0283, 0.0452, 0.0198]])\n",
       "\n",
       "Max absolute difference:\n",
-      "tensor(0.0208, grad_fn=<MaxBackward1>)\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[20], line 16\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(torch\u001b[38;5;241m.\u001b[39mmax(torch\u001b[38;5;241m.\u001b[39mabs(net\u001b[38;5;241m.\u001b[39mlinear1\u001b[38;5;241m.\u001b[39mparametrizations[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mweight\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39moriginal \u001b[38;5;241m-\u001b[39m original_weights[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlinear1.weight\u001b[39m\u001b[38;5;124m'\u001b[39m])))\n\u001b[0;32m     15\u001b[0m \u001b[38;5;66;03m# Then try the assertion\u001b[39;00m\n\u001b[1;32m---> 16\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mall(net\u001b[38;5;241m.\u001b[39mlinear1\u001b[38;5;241m.\u001b[39mparametrizations[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mweight\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39moriginal \u001b[38;5;241m==\u001b[39m original_weights[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlinear1.weight\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
+      "tensor(0.)\n"
      ]
     }
    ],
@@ -527,6 +504,106 @@
     "\n",
     "# Then try the assertion\n",
     "assert torch.all(net.linear1.parametrizations['weight'].original == original_weights['linear1.weight'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Test the network with LoRA, enabled (digit 9 should be classified better)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Testing: 100%|██████████| 1000/1000 [00:09<00:00, 100.38it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.943\n",
+      "Wrong counts for the digit 0: 14\n",
+      "Wrong counts for the digit 1: 22\n",
+      "Wrong counts for the digit 2: 58\n",
+      "Wrong counts for the digit 3: 109\n",
+      "Wrong counts for the digit 4: 98\n",
+      "Wrong counts for the digit 5: 50\n",
+      "Wrong counts for the digit 6: 88\n",
+      "Wrong counts for the digit 7: 78\n",
+      "Wrong counts for the digit 8: 37\n",
+      "Wrong counts for the digit 9: 14\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test with LoRA enabled\n",
+    "enable_disable_lora(enabled=True)\n",
+    "test()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Test network with LoRA disabled (the accuracy and error counts should be same as the original netwowrk)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Testing: 100%|██████████| 1000/1000 [00:05<00:00, 193.03it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.961\n",
+      "Wrong counts for the digit 0: 10\n",
+      "Wrong counts for the digit 1: 18\n",
+      "Wrong counts for the digit 2: 41\n",
+      "Wrong counts for the digit 3: 83\n",
+      "Wrong counts for the digit 4: 28\n",
+      "Wrong counts for the digit 5: 23\n",
+      "Wrong counts for the digit 6: 60\n",
+      "Wrong counts for the digit 7: 34\n",
+      "Wrong counts for the digit 8: 17\n",
+      "Wrong counts for the digit 9: 79\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test without LORA\n",
+    "enable_disable_lora(enabled=False)\n",
+    "test()"
    ]
   }
  ],
